# package_creation_tutorial

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: sphinx_doc.yaml  tests.yaml
docs/: conf.py  modules.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/package_creation_tutorial/: string_ops.html
docs/_build/html/_sources/: index.rst.txt
src/package_creation_tutorial/: string_ops.py
