[tool.poetry]
name = "package-creation-tutorial-rmekni"
version = "0.1.0"
description = "A tutorial package for string operations"
authors = ["Ryhem Mekni <rihemmekni6@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/RyhemMekni/package_creation_tutorial"
repository = "https://github.com/RyhemMekni/package_creation_tutorial"
documentation = "https://rhemmekni.github.io/package_creation_tutorial/"
keywords = ["string", "tutorial", "operations"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"